Shrinkwrap modifier ignores negative offsets #60285

Closed
opened 2019-01-07 18:28:13 +01:00 by Marcus Camen · 5 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GTX 1080

Blender Version
Broken: 2.80, 3d2ff33c26, 2019-01-07

See attached .blend file and screenshot for a demonstration.
In 2.7 Shrinkwrap modifier with 'Keep Above Surface' allows to use positive as well as negative offsets.
In 2.8 positive offsets work fine but negative offsets are always interpreted as offset 0.
bug-shrinkwrap.png

bug-shrinkwrap.blend

**System Information** Operating system: Windows 10 Graphics card: NVIDIA GTX 1080 **Blender Version** Broken: 2.80, 3d2ff33c2615, 2019-01-07 See attached .blend file and screenshot for a demonstration. In 2.7 Shrinkwrap modifier with 'Keep Above Surface' allows to use positive as well as negative offsets. In 2.8 positive offsets work fine but negative offsets are always interpreted as offset 0. ![bug-shrinkwrap.png](https://archive.blender.org/developer/F6211570/bug-shrinkwrap.png) [bug-shrinkwrap.blend](https://archive.blender.org/developer/F6211572/bug-shrinkwrap.blend)
Author

Added subscriber: @mcamen

Added subscriber: @mcamen
Member

Added subscribers: @angavrilov, @JacquesLucke

Added subscribers: @angavrilov, @JacquesLucke
Member

Looks like @angavrilov worked on this code last. Can you help with that?

Looks like @angavrilov worked on this code last. Can you help with that?
Alexander Gavrilov self-assigned this 2019-01-10 09:54:05 +01:00

This issue was referenced by 80ffa73b3f

This issue was referenced by 80ffa73b3f87caef9511c073e6ff2e004de7f5b3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60285
No description provided.