Fix T60285: allow negative offsets in shrinkwrap (worked in 2.79).